=================
Changes for crash
=================

Unreleased
==========

2016/06/28 0.17.1
=================

 - Fix: crash_standalone could crash because it contained non-ascii character
   but no encoding was declared

2016/06/23 0.17.0
=================

 - Added support for OPTIMIZE table statement.

 - All statements will respond with an affected rows count now.

 - Added a configuration file that stores default values for Crash. The file is
   placed inside the user's application config folder.
   A path to a custom configuration file can be specified using the ``--config``
   command line argument.

 - Dropped Python 2.6 support

 - Added support for client certificates

 - It is now possible to disable autocompletion using ``--no-autocomplete``
   command line argument and to toggle autocomplete using the ``\autocomplete``
   crash command.

2016/06/23 0.16.1
=================

 - Fixed "read file" command (``\r``) for legacy Python 2.7

 - Fixed result info command output for whitespace other than space
   characters in queries.

 - Fixed call of `sysinfo` command when launching the shell.

2016/02/15 0.16.0
=================

 - The order of the keys / columns of the ``json`` output format is now
   deterministic and reflects the order of the columns in the executed query.

 - `Ctrl-c` no longer results in a KeyboardInterrupt exception if invoked while
   a query is being executed.

 - Added initial auto-completion support for the internal ``\format`` and
   ``\r`` commands.

 - Added a new ``\r`` command which can be used to read and execute statements
   from a file.

 - Fixed an error that occurred under python 3 if one of the built-in commands
   that require an argument were called without argument.

2015/12/14 0.15.0
=================

 - Added new format ``json_row`` which prints a dataset as json row-by-row
   in separate lines.

 - Added the ``sysinfo`` command which queries the ``sys`` tables for