@@ -85,6 +85,8 @@ You can get a list of commands by typing ``\?``:
 +----------------------+------------------------------------------------------------------------------------+
 | ``\q``               | Quit Crate shell                                                                   |
 +----------------------+------------------------------------------------------------------------------------+
+| ``\checknode``       | Query the sys.node_checks table for failing node checks                            |
++----------------------+------------------------------------------------------------------------------------+
 | ``\check``           | Query the sys.checks table for failing cluster checks                              |
 +----------------------+------------------------------------------------------------------------------------+
 | ``\r <filename>``    | Reads statements from the given file and executes them                             |
