@@ -29,7 +29,8 @@ from crate.testing.layer import CrateLayer
 from .command import CrateCmd
 from .printer import ColorPrinter, PrintWrapper
 from .test_command import CommandTest, OutputWriterTest
-from .test_commands import ReadFileCommandTest, ToggleAutocompleteCommandTest
+from .test_commands import ReadFileCommandTest, ToggleAutocompleteCommandTest, \
+    ChecksCommandTest
 from .test_sysinfo import SysInfoTest
 from .test_repl import SQLCompleterTest
 from .test_config import ConfigurationTest
@@ -96,6 +97,7 @@ def test_suite():
     suite.addTest(unittest.makeSuite(SysInfoTest))
     suite.addTest(unittest.makeSuite(ReadFileCommandTest))
     suite.addTest(unittest.makeSuite(ToggleAutocompleteCommandTest))
+    suite.addTest(unittest.makeSuite(ChecksCommandTest))
     suite.addTest(unittest.makeSuite(SQLCompleterTest))
     suite.addTest(unittest.makeSuite(ConfigurationTest))
 
