@@ -49,7 +49,7 @@ Successful connects will give you some information about the servers you connect
     +------------------------+-----------+---------+-----------+---------+
     | http://127.0.0.1:44209 | crate     | ...     | TRUE      | OK      |
     +------------------------+-----------+---------+-----------+---------+
-    CONNECT OKCLUSTER CHECK OK
+    CONNECT OKCLUSTER CHECK OKCrate ... does not support the "nodecheck" command.
 
 If you connect to more than one server, the command will succeed
 if at least one server is reachable::
@@ -61,7 +61,7 @@ if at least one server is reachable::
     | http://127.0.0.1:44209      | crate     | ...     | TRUE      | OK            |
     | http://300.300.300.300:4295 | NULL      | 0.0.0   | FALSE     | Server not... |
     +-----------------------------+-----------+---------+-----------+-----------...-+
-    CONNECT OKCLUSTER CHECK OK
+    CONNECT OKCLUSTER CHECK OKCrate ... does not support the "nodecheck" command.
 
 Once the shell is connected, SQL statements can be executed simply by entering
 them without any special arguments like this::
@@ -93,9 +93,7 @@ them without any special arguments like this::
 When the Crate shell is started with the option ``-v`` debugging information will be printed::
 
     cr> select x from y;
-    SQLActionException[Table 'doc.y' unknown]
-    io.crate.exceptions.TableUnknownException: Table 'doc.y' unknown
-    	at io.crate.metadata.ReferenceInfos.getTableInfo(ReferenceInfos.java:...)
+    SQLActionException[TableUnknownException: Table 'doc.y' unknown]
     ...
 
 
