@@ -1,5 +1,5 @@
 [versions]
-crate_server = 0.54.7
+crate_server = 0.55.2
 
 Babel = 2.2.0
 Jinja2 = 2.8
